--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,10 @@
 <body>
   <div class="main-content">
     {{>header}}
-
+    <p>
+      This site was created by {{name}}.
+      It uses data from mapbox.com and darksky.net!
+    </p>
     <img class="portrait" src="/img/me.jpg" alt="Beautiful photo of me" />
   </div>
 
